antsurance/force-app/main/default/objects/Claude_Autonomy__c/Claude_Autonomy__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>How much Claude may do on its own for each kind of work on Claude's desk: auto (does it and reports), approve (prepares it for a person) or off. A blank value means the default for that kind. Work that moves money or leaves the company can never be auto; Apex enforces that whatever is stored here.</description>
    <label>Claude Autonomy</label>
</CustomObject>