antsurance/force-app/main/default/objects/Claude_Autonomy__c/fields/Claim_Brief__c.field-meta.xml
<CustomField>
    <fullName>Claim_Brief__c</fullName>
    <description>Briefs on open claims. One of auto, approve or off.</description>
    <label>Claim Brief</label>
    <length>10</length>
    <type>Text</type>
</CustomField>