antsurance/force-app/main/default/objects/Claude_Autonomy__c/fields/Quote_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Quote_Follow_Up__c</fullName>
    <description>Follow-ups on quotes a customer has had for a while. One of auto, approve or off.</description>
    <label>Quote Follow-Up</label>
    <length>10</length>
    <type>Text</type>
</CustomField>