antsurance/force-app/main/default/objects/Claude_Autonomy__c/fields/Renewal_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Outreach__c</fullName>
    <description>Notes to customers whose policies are up for renewal. One of auto, approve or off.</description>
    <label>Renewal Outreach</label>
    <length>10</length>
    <type>Text</type>
</CustomField>