antsurance/force-app/main/default/objects/Claude_Autonomy__c/fields/Reserve_Review__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Review__c</fullName>
    <description>Proposed reserve changes. One of auto, approve or off.</description>
    <label>Reserve Review</label>
    <length>10</length>
    <type>Text</type>
</CustomField>