antsurance/force-app/main/default/objects/Claude_Autonomy__c/fields/Underwriting_Memo__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Memo__c</fullName>
    <description>Memos on quotes waiting on an underwriter. One of auto, approve or off.</description>
    <label>Underwriting Memo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>